2021-01-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * VisualMagick/bin: Remove hp2xx.exe, mpeg2dec.exe, and
        mpeg2enc.exe.  There is no value to distributing these pre-built
        and flimsy executables in the source package.

        * filters/analyze.c (AnalyzeImage): Add OpenMP speed-ups.

2021-01-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * filters/analyze.c (AnalyzeImage): Tidy the structure of the code
        a bit.

        * magick/module.c (ExecuteModuleProcess): Add error reporting for
        the case that the expected symbol is not resolved.

2021-01-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * configure.ac: Remove updates to use recommended forms of AC_INIT
        and AM_INIT_AUTOMAKE.  There were too many annoying side-effects
        to daily development from these changes.  Perhaps they will be
        re-visited if solutions for Autotools regeneration issues are
        found.

2021-01-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * magick/render.c (InverseAffineMatrix): Avoid possible division
        by zero or absurdly extreme scaling in InverseAffineMatrix().
        Fixes oss-fuzz 28293 "Divide-by-zero - InverseAffineMatrix".

2021-01-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * configure.ac (CONFIG_STATUS_DEPENDENCIES): Regenerate
        configure.ac if ChangeLog or version.sh is updated.

2021-01-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/pdf.c (WritePDFImage): Converting a TIF to a PDF set the
        page MediaBox to the TIFF dimensions in pixels while the CropBox
        is set in local context dimensions. The latter is correct, the
        former is not.  Set the MediaBox to the proper dimension in local
        context.  Should be the same in this context.  Patch by Hubert
        Figuiere and retrieved from SourceForge patch #64 "Incorrect
        MediaBox in PDF export".
