@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020210130"
-#define public MagickPackageReleaseDate "snapshot-20210130"
+#define public MagickPackageVersionAddendum ".020210131"
+#define public MagickPackageReleaseDate "snapshot-20210131"
